Harden evidence determinism and verification boundaries